<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">Receptár</string>
    <string name="login">Prihlásiť</string>
    <string name="user_name">Prihlasovacie meno</string>
    <string name="password">Heslo</string>
    <string name="register">Registrovať</string>
    <string name="recipe_name">Názov receptu</string>
    <string name="save">Uložiť</string>
    <string name="recipe_title">Názov receptu</string>
    <string name="steps">Postup</string>
    <string name="recipe_text">Postup:</string>
    <string name="edit">Upraviť</string>
    <string name="delete">Odstrániť</string>
    <string name="publish_comment">Uverejniť komentár</string>
    <string name="write_comment_hint">Napíšte komentár…</string>
    <string name="user_recipes">Moje recepty</string>
    <string name="logout">Odhlásiť</string>
    <string name="browse_recipes">Prehliadať recepty</string>
    <string name="comment_section_title">Komentáre</string>
    <string name="cancel">Zrušiť</string>
    <string name="alert">Pozor!</string>
    <string name="delete_recipe_question">Naozaj chcete odstrániť tento recept?</string>
    <string name="recipe_deleted">Recept odstránený!</string>
    <string name="comment_text_alert">Komentár musí obsahovať text!</string>
    <string name="comment_published">Komentár uverejnený!</string>
    <string name="recipe_no_title_alert">Recept nemá zadaný názov!</string>
    <string name="recipe_no_body_alert">Recept nemá zadaný postup!</string>
    <string name="logout_success">Odhlásenie úspešne!</string>
    <string name="login_failed">Problém s prihlásením</string>
    <string name="login_success">Prihlásenie úspešné</string>
    <string name="register_failed">Problém s registráciou</string>
    <string name="register_success">Registrácia úspešná!</string>
    <string name="recipe_saved">Recept uložený!</string>
    <string name="search">Hľadať</string>
</resources>
