<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_recipes"
            android:icon="@drawable/icon_user_recipes"
            android:title="@string/user_recipes" />
        <item
            android:id="@+id/nav_browse_recipes"
            android:icon="@drawable/icon_browse_recipes"
            android:title="@string/browse_recipes" />
    </group>

    <item android:title="@string/logout">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/icon_exit"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>