<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/text_view_recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/text_view_recipe_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_recipe_title"
            android:layout_marginStart="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <View
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/text_view_recipe_author"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/text_view_recipe_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/recipe_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/text_view_recipe_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_recipe_text_title"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <View
            android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/text_view_recipe_text"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/text_view_comment_section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/comment_section_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comments_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_comment_section_title"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/comment_item" />

        <EditText
            android:id="@+id/edit_text_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/comments_recycler_view"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:hint="@string/write_comment_hint"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/button_publish_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_comment"
            android:layout_margin="8dp"
            android:background="@color/colorAccent"
            android:text="@string/publish_comment" />
    </RelativeLayout>

</ScrollView>